--- a/fpl/requirements.txt
+++ b/fpl/requirements.txt
@@ -12,6 +12,7 @@ idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lxml==4.9.1
 MarkupSafe==2.1.1
 numpy==1.23.2
 pandas==1.4.3
